# StreamRetro

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  test.sh
jpeg_example/: build.sh  example.cpp  nanoarch.cpp
roms/: gbai.gb
server/: README.md  doom.py  http_server.py  run.py  switch-gba.js  test.html  test.sh  troubleshoot  ws_server.py
server/static/: joycon.js  start.js  style.css
server/templates/: index_15fps.html  index_20fps.html  ws_test.html
server/zmq/: client.cpp  client.py  relais.py  server.cpp  server.py  websockets
source/: Core.cpp  Core.h  LibRetroGameWrapper.cpp  LibRetroGameWrapper.h  Makefile  StreamRetroGame.h  configuration.h  libretro.h  main.cpp  nanoarch.cpp
test/: README.md  build.sh  nanoarch  test.sh
test/source/: nanoarch.cpp
